# eclipse-dev-systems

./: .gitignore  LICENSE  My Coding Instruction Toolkit.docx  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_input.json  sample_notes.md
notes/: main.py
src/offer_engine/: cli.py  engine.py  models.py  policy.py
src/offer_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_engine_smoke.py
